--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -53,7 +53,7 @@
 
 @media screen and (max-width: 767px){
     .who-we-are__img-container{
-        padding-bottom: 35rem;
+        padding-bottom: 20rem;
     }
     .subscribe__banner{
         margin: 7em 0em 0em 0em;
@@ -248,6 +248,9 @@
     .auth-copyright{
         font-size: 1.8em;
     }
+    .masonry-gallery__col{
+        font-size: 4px;
+    }
 }
 
 /* MEDIA SCREEN LESS THAN 420 PX ! DOESN`T CHANGE */
@@ -284,7 +287,7 @@
 
 @media screen and (min-width: 1720px) and (max-width: 1920px){
     html{
-        font-size: 60.5%;
+        font-size: 45.5%;
     }
     .home-page .header-title{
         font-size: 9.4em;
@@ -296,7 +299,7 @@
 
 @media screen and (min-width: 1440px) and (max-width: 1720px){
     html{
-        font-size: 54.5%;
+        font-size: 39.5%;
     }
     .who-we-are{
         padding-left: 2em;
@@ -335,7 +338,7 @@
 
 @media screen and (min-width: 1200px) and (max-width: 1440px){
     html{
-        font-size: 53.5%;
+        font-size: 38.5%;
     }
     .who-we-are__img-container img{
         max-width: 43em;
@@ -381,7 +384,7 @@
 
 @media screen and (min-width: 992px) and (max-width: 1200px){
     html{
-        font-size: 45.5%;
+        font-size: 32%;
     }
     .who-we-are__img-container img{
         max-width: 40em;
@@ -444,7 +447,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 991px){
     html{
-        font-size: 43.5%;
+        font-size: 35%;
     }
     .who-we-are__img-container img{
         max-width: 35em;
@@ -510,7 +513,7 @@
 
 @media screen and (min-width: 576px) and (max-width: 768px){
     html{
-        font-size: 36.5%;
+        font-size: 21.5%;
     }
     .who-we-are__img-container img{
         max-width: 31em;
@@ -574,6 +577,12 @@
     .sign-up__individual-section .splited-col-1-5 .custom-theme-select{
         margin-top: 0;
     }
+    .who-we-are__img-container img{
+        max-width: 25em;
+    }
+    .services__row{
+        font-size: 5px;
+    }
 }
 
 /* MEDIA QUERIES FOR 420PX BETWEEN 578PX */
@@ -583,7 +592,7 @@
         font-size: 30.5%;
     }
     .who-we-are__img-container img{
-        max-width: 26em;
+        max-width: 16em;
     }
     .who-we-are__img-container img:nth-child(1){
         left: 0;
@@ -601,7 +610,11 @@
         left: 63%;
     }
     .masonry-gallery__col img{
-        max-height: 300px;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+    .masonry-gallery__col{
+        text-align: center;
     }
     .client-feedback__slider .slick-next{
         right: 30px;
@@ -613,7 +626,7 @@
         padding: 6rem 0rem 4rem 0rem;
     }
     .who-we-are__img-container {
-        padding-bottom: 30rem !important;
+        padding-bottom: 15rem !important;
     }
     .home-page .header-title{
         font-size: 5em;
@@ -641,7 +654,7 @@
         font-size: 29.5%;
     }
     .who-we-are__img-container img{
-        max-width: 23em;
+        max-width: 16em;
     }
     .who-we-are__img-container img:nth-child(1){
         left: 0;
@@ -659,7 +672,11 @@
         left: 63%;
     }
     .masonry-gallery__col img{
-        max-height: 250px;
+        max-width: 250px;
+        margin: 0 auto;
+    }
+    .masonry-gallery__col{
+        text-align: center;
     }
     .client-feedback__slider .slick-next{
         right: 30px;
@@ -711,7 +728,7 @@
         font-size: 19.5%;
     }
     .who-we-are__img-container img{
-        max-width: 30em;
+        max-width: 14em;
     }
     .who-we-are__img-container img:nth-child(1){
         left: 0;
@@ -738,7 +755,10 @@
         padding: 6rem 0rem 4rem 0rem;
     }
     .masonry-gallery__col img{
-        max-height: 250px;
+        width:100%;
+    }
+    .masonry-gallery__col{
+        text-align: center;
     }
     .client-feedback__slider{
         padding-bottom: 3em;
@@ -781,6 +801,12 @@
     .section-step .select-selected{
         padding-top: 0.9em;
     }
+    .services__row{
+        font-size: 4px;
+    }
+    .company-aims{
+        padding-bottom: 0;
+    }
 }
 
 /* MEDIA QUERIES FOR 300PX BETWEEN 340PX */
@@ -790,7 +816,7 @@
         font-size: 21.5%;
     }
     .who-we-are__img-container img{
-        max-width: 26em;
+        max-width: 14em;
     }
     .who-we-are__img-container img:nth-child(1){
         left: 0;
@@ -808,7 +834,10 @@
         left: 63%;
     }
     .masonry-gallery__col img{
-        max-height: 250px;
+        width:100%;
+    }
+    .masonry-gallery__col{
+        text-align: center;
     }
     .client-feedback__slider .slick-next{
         right: 30px;
@@ -822,7 +851,7 @@
         padding: 6rem 0rem 8rem 0rem;
     }
     .who-we-are__img-container {
-        padding-bottom: 25rem !important;
+        padding-bottom: 15rem !important;
     }
     .client-feedback__slider .slick-next{
         bottom: 21px !important;
@@ -864,6 +893,9 @@
     }
     .section-step .select-selected{
         padding-top: 0.9em;
+    }
+    .company-aims{
+        padding-bottom: 0;
     }
 }
 
