--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -174,6 +174,10 @@
     .welcome-user{
         font-size: 14.5px;
     }
+    .auth-main{
+        font-size: 5px;
+    }
+
 
 }
 
@@ -594,6 +598,9 @@
     .header-benefits__block img{
         max-width: 18em !important;
     }
+    .section-step .select-selected{
+        font-size: 1.5em;
+    }
 }
 
 /* MEDIA QUERIES FOR 420PX BETWEEN 578PX */
@@ -658,6 +665,9 @@
     }
     .how-it-works{
         font-size: 6px;
+    }
+    .section-step .select-selected{
+        font-size: 1.075em;
     }
 }
 
@@ -726,6 +736,9 @@
     }
     .sign-up__individual-section .splited-col-1-5 .custom-theme-select{
         margin-top: 0;
+    }
+    .section-step .select-selected{
+        font-size: 1.09em;
     }
 }
 
@@ -816,6 +829,10 @@
     .company-aims{
         padding-bottom: 0;
     }
+    .section-step .select-selected{
+        font-size: 1.65em;
+        margin-bottom: 5px;
+    }
 }
 
 /* MEDIA QUERIES FOR 300PX BETWEEN 340PX */
@@ -905,6 +922,16 @@
     }
     .company-aims{
         padding-bottom: 0;
+    }
+    .section-step .custom-theme-select__container{
+        width: 29% !important;
+    }
+    .splited-col-1-5 label{
+        width: 69% !important;
+    }
+    .section-step .select-selected{
+        font-size: 1.45em;
+        margin-bottom: 6px;
     }
 }
 
