--- a/style/base.css
+++ b/style/base.css
@@ -8,12 +8,13 @@ html{
 }
 
 .container{
-    max-width: 1240px;
+    max-width: 1040px;
     margin: 0 auto;
+    padding: 0rem 12rem;
 }
 
 .services__container{
-    max-width: 1240px;
+    max-width: 1040px;
     margin: 0 auto;
 }
 
