--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -386,6 +386,11 @@
         font-size: 8em;
         padding-right: 0em;
     }
+    .auth-main__row__left-col h1{
+        font-size: 9em;
+        padding-right: 0em;
+        max-width: 240px;
+    }
 
 }
 
@@ -437,6 +442,7 @@
     .auth-main__row__left-col h1{
         font-size: 9em;
         padding-right: 0em;
+        max-width: 200px;
     }
     .sign-up__individual-section .splited-col-1-5 .custom-theme-select__container{
         width: 29%;
@@ -1021,5 +1027,11 @@
 @media screen and (max-width: 340px){
     .services-slider__block img{
         max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 350px){
+    .auth-copyright{
+        position: relative;
     }
 }
