--- a/style/home.css
+++ b/style/home.css
@@ -7,7 +7,7 @@
 }
 
 .who-we-are{
-    padding-right: 5rem;
+    padding-right: 0rem;
 }
 
 .who-we-are__img-container img{
@@ -60,11 +60,11 @@
     padding-bottom: 0.8em;
 }
 
-.masonry-gallery__col:nth-child(1) .masonry-gallery__title{
+.masonry-gallery__col:nth-child(1) .masonry-gallery__title, .masonry-gallery__col:nth-child(1) p{
     color: var(--main-red-color);
 }
 
-.masonry-gallery__col:nth-child(2) .masonry-gallery__title{
+.masonry-gallery__col:nth-child(2) .masonry-gallery__title, .masonry-gallery__col:nth-child(2) p{
     color: var(--main-yellow-color);
 }
 
@@ -72,7 +72,7 @@
     padding-top: 0.5em;
 }
 
-.masonry-gallery__col:nth-child(3) .masonry-gallery__title{
+.masonry-gallery__col:nth-child(3) .masonry-gallery__title, .masonry-gallery__col:nth-child(3) p{
     color: var(--main-blue-color);
 }
 
@@ -86,8 +86,10 @@
     padding-bottom: 5em;
 }
 
-.services h1, .services h1 span{
+.services__container{
     color: var(--main-blue-color);
+    margin-top: 7rem;
+    padding: 0rem 3rem;
 }
 
 .services-slider__block-description{
@@ -98,7 +100,7 @@
 }
 
 .services-slider__block img{
-    width: 80%;
+    width: 88%;
     display: block;
     margin: 0 auto;
 }
@@ -106,7 +108,6 @@
 .services-slider__block{
     outline: none;
     cursor: pointer;
-    margin: 0px 3.5em;
 }
 
 .services-slider .slick-slide {
